--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Protein Molecular Weight Calculator</title>
+  <title>Protein Molecular Weight Calculator V.02301</title>
 </head>
 <body>
-  <h1>Protein Molecular Weight Calculator</h1>
+  <h1>Protein Molecular Weight Calculator V.02301</h1>
   <form id="protein-form">
     <label for="sequence">Amino Acid Sequence:</label><br>
     <textarea id="sequence" rows="4" cols="50"></textarea><br>
@@ -64,12 +64,29 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
+	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
+	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
+	  <option value="246.307">BocLysine(BocK)</option>
+	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
+	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
+	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
+	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
+	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
+	  <option value="185.072">PhosphoSerine(pSer)</option>
+	  <option value="199.099">PhosphoThreonine(pThr)</option>
+	  <option value="219.240">PropargylTyrosine(ProY)</option>
+	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
+	  <option value="237.299">tertButylTyrosine(tBuY)</option>
+	  <option value="242.198">TFALysine(TFAK)</option>
+	  <option value="276.408">TMSLysine(TMSK)</option>
+	  <option value="275.424">TMS(amide)Lysine(TMSNK)</option>
 	  <option value="233.190">TriFluoromethylPhenylalanine(CF3F)</option>
 	  <option value="249.189">TriFluoromethylTyrosine(CF3Y)</option>
 	</select>
@@ -125,9 +142,31 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
+	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
+	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
+	  <option value="246.307">BocLysine(BocK)</option>
+	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
+	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
+	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
+	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
+	  <option value="183.182">FluoroPhenylalanine(FF)</option>
+	  <option value="222.219">FluoroTryptophan(FW)</option>
+	  <option value="179.219">MethylPhenylalanine(mF)</option>
+	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
+	  <option value="185.072">PhosphoSerine(pSer)</option>
+	  <option value="199.099">PhosphoThreonine(pThr)</option>
+	  <option value="219.240">PropargylTyrosine(ProY)</option>
+	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
+	  <option value="237.299">tertButylTyrosine(tBuY)</option>
+	  <option value="242.198">TFALysine(TFAK)</option>
+	  <option value="276.408">TMSLysine(TMSK)</option>
+	  <option value="275.424">TMS(amide)Lysine(TMSNK)</option>
+	  <option value="233.190">TriFluoromethylPhenylalanine(CF3F)</option>
+	  <option value="249.189">TriFluoromethylTyrosine(CF3Y)</option>
     </select>
 	
 	
