--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Protein Molecular Weight Calculator V.02301</title>
+  <title>Protein Molecular Weight Calculator V.02303</title>
 </head>
 <body>
-  <h1>Protein Molecular Weight Calculator V.02301</h1>
+  <h1>Protein Molecular Weight Calculator V.02303</h1>
   <form id="protein-form">
     <label for="sequence">Amino Acid Sequence:</label><br>
     <textarea id="sequence" rows="4" cols="50"></textarea><br>
@@ -72,12 +72,14 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
+	  <option value="229.239">CyanoTryptophan(CNW)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
 	  <option value="-20.77">GFP Chromophore(-H5O)</option>
+	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
@@ -151,12 +153,14 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
+	  <option value="229.239">CyanoTryptophan(CNW)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
 	  <option value="-20.77">GFP Chromophore(-H5O)</option>
+	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
