--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
-	  <option value="-20.77">GFP Chromophore(-H5O)</option>
+	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
+	  <option value="-23.05">RFP Chromophore(-H7O)</option>
 	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
 	  <option value="237.299">tertButylTyrosine(tBuY)</option>
 	  <option value="242.198">TFALysine(TFAK)</option>
@@ -159,13 +160,14 @@
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
-	  <option value="-20.77">GFP Chromophore(-H5O)</option>
+	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
+	  <option value="-23.05">RFP Chromophore(-H7O)</option>
 	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
 	  <option value="237.299">tertButylTyrosine(tBuY)</option>
 	  <option value="242.198">TFALysine(TFAK)</option>
