--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
+	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
+	  <option value="199.181">FluoroTyrosine(FY)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
@@ -155,11 +157,13 @@
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
+	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
 	  <option value="235.615">DiFluoroChloroPhenylalanine(F2ClF)</option>
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
+	  <option value="199.181">FluoroTyrosine(FY)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
