--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="359.256">5FAzoF</option>
+	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
 	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
@@ -148,6 +150,8 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="359.256">5FAzoF</option>
+	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
 	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
