--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
 	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
 	  <option value="246.307">BocLysine(BocK)</option>
-	  <option value="221.019">BoronicPhenylalanine(new)</option>
+	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
@@ -158,7 +158,7 @@
 	  <option value="205.085">AzaTryptophan(AzaW)</option>
 	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
 	  <option value="246.307">BocLysine(BocK)</option>
-	  <option value="221.019">BoronicPhenylalanine(new)</option>
+	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
