--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 	  <option value="246.307">BocLysine(BocK)</option>
 	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
+	  <option value="283.125">BromoTryptophan(BrW)</option>
+	  <option value="238.671">ChloroTryptophan(ClW)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
@@ -85,6 +87,8 @@
 	  <option value="199.181">FluoroTyrosine(FY)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
+	  <option value="220.228">HydroxyTryptophan(OHW)</option>
+	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
@@ -160,6 +164,8 @@
 	  <option value="246.307">BocLysine(BocK)</option>
 	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
+	  <option value="283.125">BromoTryptophan(BrW)</option>
+	  <option value="238.671">ChloroTryptophan(ClW)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
@@ -172,6 +178,8 @@
 	  <option value="199.181">FluoroTyrosine(FY)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
+	  <option value="220.228">HydroxyTryptophan(OHW)</option>
+	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
