--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <head>
   <title>Protein Molecular Weight Calculator V.02303</title>
 </head>
@@ -85,10 +86,12 @@
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
 	  <option value="199.181">FluoroTyrosine(FY)</option>
+	  <option value="232.239">FormylTryptophan(CHOW)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="220.228">HydroxyTryptophan(OHW)</option>
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
+	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
@@ -176,10 +179,12 @@
 	  <option value="183.182">FluoroPhenylalanine(FF)</option>
 	  <option value="222.219">FluoroTryptophan(FW)</option>
 	  <option value="199.181">FluoroTyrosine(FY)</option>
+	  <option value="232.239">FormylTryptophan(CHOW)</option>
 	  <option value="-21.04">GFP Chromophore(-H5O)</option>
 	  <option value="316.328">H-Cys(DMNB)</option>
 	  <option value="220.228">HydroxyTryptophan(OHW)</option>
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
+	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
