--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
+	  <option value="223.250">CNPthiol</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
@@ -169,6 +170,7 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
+	  <option value="223.250">CNPthiol</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
