--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
+	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
@@ -189,6 +190,7 @@
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
+	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
