--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
-	  <option value="223.250">CNPthiol</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
+	  <option value="266.238">CysCF3</option>
+	  <option value="223.250">CysCNP</option>
 	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
@@ -171,10 +172,11 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
-	  <option value="223.250">CNPthiol</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
+	  <option value="266.238">CysCF3</option>
+	  <option value="223.250">CysCNP</option>
 	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
