--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.217">AzaTryptophan(AzaW)</option>
 	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
+	  <option value="243.266">BiPyridylAlanine(BPyA)</option>
 	  <option value="246.307">BocLysine(BocK)</option>
 	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
@@ -95,6 +96,8 @@
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
+	  <option value="267.201">NBDamino</option>
+          <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
@@ -167,6 +170,7 @@
 	  <option value="180.207">AminoPhenylalanine(AmF)</option>
 	  <option value="205.217">AzaTryptophan(AzaW)</option>
 	  <option value="206.205">AzidoPhenylalanine(AzF)</option>
+	  <option value="243.266">BiPyridylAlanine(BPyA)</option>
 	  <option value="246.307">BocLysine(BocK)</option>
 	  <option value="221.019">BoronicPhenylalanine(BoW)</option>
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
@@ -191,6 +195,8 @@
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
+          <option value="267.201">NBDamino</option>
+	  <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
