--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
 	  <option value="266.238">CysCF3</option>
 	  <option value="223.250">CysCNP</option>
+	  <option value="224.238">CysCNPym</option>
 	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
@@ -181,6 +182,7 @@
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
 	  <option value="266.238">CysCF3</option>
 	  <option value="223.250">CysCNP</option>
+	  <option value="224.238">CysCNPym</option>
 	  <option value="231.215">DiCyanoPyridinyldiaminopropanoic acid(DCPN1)</option>
 	  <option value="201.173">DiFluoroPhenylalanine(F2F)</option>
 	  <option value="217.172">DiFluoroTyrosine(F2Y)</option>
