--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
+	  <option value="263.249">Coumarin(Hco)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
@@ -177,6 +178,7 @@
 	  <option value="209.008">BoronoPhenylalanine(BoF)</option>
 	  <option value="283.125">BromoTryptophan(BrW)</option>
 	  <option value="238.671">ChloroTryptophan(ClW)</option>
+	  <option value="263.249">Coumarin(Hco)</option>
 	  <option value="190.202">CyanoPhenylalanine(CNF)</option>
 	  <option value="191.190">CyanoPyridylalanine(CNP)</option>
 	  <option value="229.239">CyanoTryptophan(CNW)</option>
