--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
-	  <option value="267.201">NBDamino</option>
+	  <option value="267.201">NBDO</option>
+	  <option value="249.23">NitroTryptophan(NO2W)</option>
           <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
@@ -199,7 +200,8 @@
 	  <option value="234.255">MethoxyTryptophan(MeOW)</option>
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
-          <option value="267.201">NBDamino</option>
+          <option value="267.201">NBDO</option>
+	  <option value="249.23">NitroTryptophan(NO2W)</option>
 	  <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
