--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
 	  <option value="267.201">NBDO</option>
+	  <option value="330.17">NBDSe</option>
 	  <option value="249.23">NitroTryptophan(NO2W)</option>
           <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
@@ -201,6 +202,7 @@
 	  <option value="262.265">MethyloxycarboxyTryptophan(MeCOOW)</option>
 	  <option value="179.219">MethylPhenylalanine(mF)</option>
           <option value="267.201">NBDO</option>
+	  <option value="330.17">NBDSe</option>
 	  <option value="249.23">NitroTryptophan(NO2W)</option>
 	  <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
