--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="180.17">3cnpa</option>
 	  <option value="359.256">5FAzoF</option>
 	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
@@ -168,6 +169,7 @@
 	  <option value="117.148">V</option>
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
+	  <option value="180.17">3cnpa</option>
 	  <option value="359.256">5FAzoF</option>
 	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
