--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
 	  <option value="330.17">NBDSe</option>
 	  <option value="249.23">NitroTryptophan(NO2W)</option>
           <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
+	  <option value="303.19">o-NitroBenzylSelenoCysteine(oNBSec)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
 	  <option value="-23.05">RFP Chromophore(-H7O)</option>
+	  <option value="168.07">Selenocysteine(Sec)</option>
 	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
 	  <option value="237.299">tertButylTyrosine(tBuY)</option>
 	  <option value="242.198">TFALysine(TFAK)</option>
@@ -207,12 +209,14 @@
 	  <option value="330.17">NBDSe</option>
 	  <option value="249.23">NitroTryptophan(NO2W)</option>
 	  <option value="256.276">o-NitroBenzylCysteine(oNBCys)</option> 
+	  <option value="303.19">o-NitroBenzylSelenoCysteine(oNBSec)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
 	  <option value="-23.05">RFP Chromophore(-H7O)</option>
+	  <option value="168.07">Selenocysteine(Sec)</option>
 	  <option value="261.248">SulfoTyrosine(SO3Y)</option>
 	  <option value="237.299">tertButylTyrosine(tBuY)</option>
 	  <option value="242.198">TFALysine(TFAK)</option>
