--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
 	  <option value="180.17">3cnpa</option>
+	  <option value="200.15">3no2pa</option>
 	  <option value="359.256">5FAzoF</option>
 	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
@@ -172,6 +173,7 @@
       <option value="204.229">W</option>
       <option value="181.191">Y</option>
 	  <option value="180.17">3cnpa</option>
+	  <option value="200.15">3no2pa</option>
 	  <option value="359.256">5FAzoF</option>
 	  <option value="301.350">AAPF</option>
 	  <option value="207.229">AcetylPhenylalanine(AcF)</option>
