--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 	  <option value="303.19">o-NitroBenzylSelenoCysteine(oNBSec)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
+	  <option value="340.16">PF7</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
@@ -214,6 +215,7 @@
 	  <option value="303.19">o-NitroBenzylSelenoCysteine(oNBSec)</option>
 	  <option value="255.144">PentaFluoroPhenylalanine(F5F)</option>
 	  <option value="291.236">PentaFluorosulfanylPhenylalanine(SF5)</option>
+	  <option value="340.16">PF7</option>
 	  <option value="185.072">PhosphoSerine(pSer)</option>
 	  <option value="199.099">PhosphoThreonine(pThr)</option>
 	  <option value="219.240">PropargylTyrosine(ProY)</option>
